# trajectory_loader

./: CMakeLists.txt  README.md  package.xml
config/: defaults.param.yaml
data/: imola.csv
include/trajectory_loader/: csv_loader.hpp  trajectory_loader.hpp  trajectory_loader_node.hpp  visibility_control.hpp
launch/: trajectory_loader.launch.py
src/: csv_loader.cpp  trajectory_loader.cpp  trajectory_loader_node.cpp
